--- a/src/Directory.build.props
+++ b/src/Directory.build.props
@@ -6,10 +6,10 @@
     <Copyright>Copyright (c) Sven-Michael Stübe</Copyright> 
     <Authors>Sven-Michael Stübe</Authors>
     <Owners>Sven-Michael Stübe</Owners>
-    <Version>2.1.4</Version>
+    <Version>2.1.5</Version>
     
     <PublishRepositoryUrl>true</PublishRepositoryUrl>
-    <RepositoryUrl>https://github.com/smstuebe/xamarin-fingerprint</RepositoryUrl>
+    <RepositoryUrl>https://github.com/stratisproject/Xamarin.Biometric</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <NeutralLanguage>en</NeutralLanguage>
     
@@ -26,8 +26,8 @@
     <PackageLicenseExpression>MS-PL</PackageLicenseExpression>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
   
-    <PackageProjectUrl>https://github.com/smstuebe/xamarin-fingerprint</PackageProjectUrl>
-    <PackageReleaseNotes>https://github.com/smstuebe/xamarin-fingerprint/blob/master/doc/changelog.md</PackageReleaseNotes>
+    <PackageProjectUrl>https://github.com/stratisproject/Xamarin.Biometric</PackageProjectUrl>
+    <PackageReleaseNotes>https://github.com/stratisproject/Xamarin.Biometric/blob/master/doc/changelog.md</PackageReleaseNotes>
     <PackageIcon>xamarin_fingerprint.png</PackageIcon>
 
     <PackageTags>xamarin;mvvmcross;mvvm;monodroid;Xamarin.iOS10;mac;Xamarin.Mac;ios;fingerprint;authenticate;Xamarin.Android;android;touchid;biometric;windows;uwp;face id;unlock</PackageTags>
